# Gender-Based-Data-Bias-And-Model-Fairness-Evaluation-Framework

./: README.md  open-access dataset list.xlsx  pyproject.toml
Fairness Evaluation of Deployed ML Algorithm/: experiment_records.xlsx  fairtl_statisticaltest.py
Fairness Evaluation of Deployed ML Algorithm/dataset_test/: K42.ipynb  fairtl_statisticaltest.py
Inherent Bias Evaluation of Benchmark dataset/: experiment_records.xlsx
