[project]
dependencies = []
name = "ML-Bias-Fairness-Evaluation-Code"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
ml_bias_fairness_evaluation_code = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
scikit-learn = ">=1.8.0,<2"
kagglehub = ">=0.4.0,<0.5"
pip = ">=25.3,<26"
ipykernel = ">=7.1.0,<8"
pandas = ">=2.3.3,<3"
pingouin = ">=0.5.5,<0.6"
openpyxl = ">=3.1.5,<4"
ucimlrepo = ">=0.0.7,<0.0.8"
